# QtChatTCP

./: .gitignore  CMakeLists.txt  README.md  TransferProtocol.cpp  TransferProtocol.h
Client/: CMakeLists.txt  choosename.cpp  choosename.h  choosename.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Client/css/: tabWidget.css
Client/headers/: ChooseAddressPort.h  ChooseName.h  ClientConnection.h  MainWindow.h  MyButton.h  MyLineEdit.h  MyTabBar.h  MyTabWidget.h  VerticalTabBar.h  VerticalTabWidget.h
Client/qss/: tabWidget.qss
Client/src/: ChooseAddressPort.cpp  ChooseName.cpp  ClientConnection.cpp  MainWindow.cpp  MyButton.cpp  MyLineEdit.cpp  MyTabBar.cpp  MyTabWidget.cpp  VerticalTabBar.cpp  VerticalTabWidget.cpp
Client/uis/: ChooseAddressPort.ui  ChooseName.ui  MainWindow.ui
Server/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Server/headers/: ChatTcpServer.h  MainWindow.h  ServerWorker.h
Server/src/: ChatTcpServer.cpp  MainWindow.cpp  ServerWorker.cpp  main.cpp
Server/uis/: MainWindow.ui
